contrib/media/ffmpeg/tests/snapshots/golden__optimize_ops.snap
---
source: crates/rskit-media-ffmpeg/tests/golden.rs
expression: "&summary"
---
[
  "Resize(ResizeOp { resolution: Resolution { width: 1280, height: 720 }, mode: Fit })",
  "Volume(0.4)",
  "Speed(2.0)",
  "Filter(Filter { name: \"grayscale\", target: Video, params: Params({}) })"
]
