contrib/media/ffmpeg/tests/snapshots/golden__probe_real_jpeg.snap
---
source: crates/rskit-media-ffmpeg/tests/golden.rs
expression: "&meta"
---
{
  "media_type": "Video",
  "format": "image2",
  "duration": "[duration]",
  "size": "[size]",
  "bitrate": "[bitrate]",
  "tracks": [
    {
      "index": 0,
      "kind": "Video",
      "codec": "mjpeg",
      "bitrate": "[bitrate]",
      "language": null,
      "is_default": false,
      "title": null,
      "duration": "[duration]",
      "video": {
        "resolution": {
          "width": 270,
          "height": 270
        },
        "frame_rate": {
          "num": 25,
          "den": 1
        },
        "pixel_format": "yuvj420p",
        "rotation": null,
        "color_space": "Bt601",
        "color_range": "Full",
        "bit_depth": 8,
        "profile": "H264Baseline",
        "level": null,
        "hdr": null
      },
      "audio": null,
      "subtitle": null
    }
  ],
  "tags": "[tags]",
  "created_at": "[created_at]"
}
